# moonshine

./: .gitignore  CMakeLists.txt  DWABUILD.md  README.md  SConscript  package.py
dso/displayfilter/: CMakeLists.txt
dso/displayfilter/BlendDisplayFilter/: BlendDisplayFilter.cc  BlendDisplayFilter.ispc  BlendDisplayFilter.json  CMakeLists.txt  SConscript
dso/displayfilter/ClampDisplayFilter/: CMakeLists.txt  ClampDisplayFilter.cc  ClampDisplayFilter.ispc  ClampDisplayFilter.json  SConscript
dso/displayfilter/ColorCorrectDisplayFilter/: CMakeLists.txt  ColorCorrectDisplayFilter.cc  ColorCorrectDisplayFilter.ispc  ColorCorrectDisplayFilter.json  SConscript
dso/displayfilter/ConstantDisplayFilter/: CMakeLists.txt  ConstantDisplayFilter.cc  ConstantDisplayFilter.ispc  ConstantDisplayFilter.json  SConscript
dso/displayfilter/ConvolutionDisplayFilter/: CMakeLists.txt  ConvolutionDisplayFilter.cc  ConvolutionDisplayFilter.ispc  ConvolutionDisplayFilter.json  SConscript
dso/displayfilter/DiscretizeDisplayFilter/: CMakeLists.txt  DiscretizeDisplayFilter.cc  DiscretizeDisplayFilter.ispc  DiscretizeDisplayFilter.json  SConscript
dso/displayfilter/DofDisplayFilter/: CMakeLists.txt  DofDisplayFilter.cc  DofDisplayFilter.ispc  DofDisplayFilter.json  SConscript
dso/displayfilter/HalftoneDisplayFilter/: CMakeLists.txt  HalftoneDisplayFilter.cc  HalftoneDisplayFilter.ispc  HalftoneDisplayFilter.json  SConscript
dso/displayfilter/OpDisplayFilter/: CMakeLists.txt  OpDisplayFilter.cc  OpDisplayFilter.ispc  OpDisplayFilter.json  SConscript
dso/displayfilter/OverDisplayFilter/: CMakeLists.txt  OverDisplayFilter.cc  OverDisplayFilter.ispc  OverDisplayFilter.json  SConscript
dso/displayfilter/RampDisplayFilter/: CMakeLists.txt  RampDisplayFilter.cc  RampDisplayFilter.ispc  RampDisplayFilter.json  SConscript
dso/displayfilter/RemapDisplayFilter/: CMakeLists.txt  RemapDisplayFilter.cc  RemapDisplayFilter.ispc  RemapDisplayFilter.json  SConscript
dso/displayfilter/RgbToFloatDisplayFilter/: CMakeLists.txt  RgbToFloatDisplayFilter.cc  RgbToFloatDisplayFilter.ispc  RgbToFloatDisplayFilter.json  SConscript
dso/displayfilter/RgbToHsvDisplayFilter/: CMakeLists.txt  RgbToHsvDisplayFilter.cc  RgbToHsvDisplayFilter.ispc  RgbToHsvDisplayFilter.json  SConscript
dso/displayfilter/ShadowDisplayFilter/: CMakeLists.txt  SConscript  ShadowDisplayFilter.cc  ShadowDisplayFilter.ispc  ShadowDisplayFilter.json
dso/displayfilter/TangentSpaceDisplayFilter/: CMakeLists.txt  SConscript  TangentSpaceDisplayFilter.cc  TangentSpaceDisplayFilter.ispc  TangentSpaceDisplayFilter.json
dso/displayfilter/ToonDisplayFilter/: CMakeLists.txt  SConscript  ToonDisplayFilter.cc  ToonDisplayFilter.ispc  ToonDisplayFilter.json
dso/map/: CMakeLists.txt
dso/map/AxisAngleMap/: AxisAngleMap.cc  AxisAngleMap.ispc  AxisAngleMap.json  CMakeLists.txt  SConscript
dso/map/BlendMap/: BlendMap.cc  BlendMap.ispc  BlendMap.json  CMakeLists.txt  SConscript
dso/map/ClampMap/: CMakeLists.txt  ClampMap.cc  ClampMap.ispc  ClampMap.json  SConscript
dso/map/ColorCorrectContrastMap/: CMakeLists.txt  ColorCorrectContrastMap.cc  ColorCorrectContrastMap.ispc  ColorCorrectContrastMap.json  SConscript
dso/map/ColorCorrectGainOffsetMap/: CMakeLists.txt  ColorCorrectGainOffsetMap.cc  ColorCorrectGainOffsetMap.ispc  ColorCorrectGainOffsetMap.json  SConscript
dso/map/ColorCorrectGammaMap/: CMakeLists.txt  ColorCorrectGammaMap.cc  ColorCorrectGammaMap.ispc  ColorCorrectGammaMap.json  SConscript
dso/map/ColorCorrectHsvMap/: CMakeLists.txt  ColorCorrectHsvMap.cc  ColorCorrectHsvMap.ispc  ColorCorrectHsvMap.json  SConscript
dso/map/ColorCorrectHueShiftMap/: CMakeLists.txt  ColorCorrectHueShiftMap.cc  ColorCorrectHueShiftMap.ispc  ColorCorrectHueShiftMap.json  SConscript
dso/map/ColorCorrectLegacyMap/: CMakeLists.txt  ColorCorrectLegacyMap.cc  ColorCorrectLegacyMap.ispc  ColorCorrectLegacyMap.json  SConscript
dso/map/ColorCorrectMap/: CMakeLists.txt  ColorCorrectMap.cc  ColorCorrectMap.ispc  ColorCorrectMap.json  SConscript
dso/map/ColorCorrectNukeMap/: CMakeLists.txt  ColorCorrectNukeMap.cc  ColorCorrectNukeMap.ispc  ColorCorrectNukeMap.json  SConscript
dso/map/ColorCorrectSaturationMap/: CMakeLists.txt  ColorCorrectSaturationMap.cc  ColorCorrectSaturationMap.ispc  ColorCorrectSaturationMap.json  SConscript
dso/map/ColorCorrectTMIMap/: CMakeLists.txt  ColorCorrectTMIMap.cc  ColorCorrectTMIMap.ispc  ColorCorrectTMIMap.json  SConscript
dso/map/ConstantColorMap/: CMakeLists.txt  ConstantColorMap.cc  ConstantColorMap.ispc  ConstantColorMap.json  SConscript
dso/map/ConstantScalarMap/: CMakeLists.txt  ConstantScalarMap.cc  ConstantScalarMap.ispc  ConstantScalarMap.json  SConscript
dso/map/CurvatureMap/: CMakeLists.txt  CurvatureMap.cc  CurvatureMap.ispc  CurvatureMap.json  SConscript
dso/map/DeformationMap/: CMakeLists.txt  DeformationMap.cc  DeformationMap.ispc  DeformationMap.json  SConscript
dso/map/DirectionalMap/: CMakeLists.txt  DirectionalMap.cc  DirectionalMap.ispc  DirectionalMap.json  SConscript
dso/map/FloatToRgbMap/: CMakeLists.txt  FloatToRgbMap.cc  FloatToRgbMap.ispc  FloatToRgbMap.json  SConscript
dso/map/GradientMap/: CMakeLists.txt  GradientMap.cc  GradientMap.ispc  GradientMap.json  SConscript
dso/map/HairColorPresetsMap/: CMakeLists.txt  HairColorPresetsMap.cc  HairColorPresetsMap.ispc  HairColorPresetsMap.json  SConscript
dso/map/HairColumnMap/: CMakeLists.txt  HairColumnMap.cc  HairColumnMap.ispc  HairColumnMap.json  SConscript
dso/map/HairMap/: CMakeLists.txt  HairMap.cc  HairMap.ispc  HairMap.json  SConscript
dso/map/HsvToRgbMap/: CMakeLists.txt  HsvToRgbMap.cc  HsvToRgbMap.ispc  HsvToRgbMap.json  SConscript
dso/map/LODMap/: CMakeLists.txt  LODMap.cc  LODMap.ispc  LODMap.json  SConscript
dso/map/LayerMap/: CMakeLists.txt  LayerMap.cc  LayerMap.ispc  LayerMap.json  SConscript
dso/map/MultiChannelToFloatMap/: CMakeLists.txt  MultiChannelToFloatMap.cc  MultiChannelToFloatMap.ispc  MultiChannelToFloatMap.json  SConscript
dso/material/: CMakeLists.txt
dso/normalmap/: CMakeLists.txt
(+417 files in other folders)
