# Copyright 2023 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(BlendDisplayFilter)
add_subdirectory(ClampDisplayFilter)
add_subdirectory(ColorCorrectDisplayFilter)
add_subdirectory(ConstantDisplayFilter)
add_subdirectory(ConvolutionDisplayFilter)
add_subdirectory(DiscretizeDisplayFilter)
add_subdirectory(DofDisplayFilter)
add_subdirectory(HalftoneDisplayFilter)
add_subdirectory(OpDisplayFilter)
add_subdirectory(OverDisplayFilter)
add_subdirectory(RampDisplayFilter)
add_subdirectory(RemapDisplayFilter)
add_subdirectory(RgbToFloatDisplayFilter)
add_subdirectory(RgbToHsvDisplayFilter)
add_subdirectory(ShadowDisplayFilter)
add_subdirectory(TangentSpaceDisplayFilter)
add_subdirectory(ToonDisplayFilter)
