# Copyright 2023 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(AxisAngleMap)
add_subdirectory(BlendMap)
add_subdirectory(ClampMap)
add_subdirectory(ColorCorrectContrastMap)
add_subdirectory(ColorCorrectGainOffsetMap)
add_subdirectory(ColorCorrectGammaMap)
add_subdirectory(ColorCorrectHsvMap)
add_subdirectory(ColorCorrectHueShiftMap)
add_subdirectory(ColorCorrectLegacyMap)
add_subdirectory(ColorCorrectMap)
add_subdirectory(ColorCorrectSaturationMap)
add_subdirectory(ColorCorrectTMIMap)
add_subdirectory(ConstantColorMap)
add_subdirectory(ConstantScalarMap)
add_subdirectory(CurvatureMap)
add_subdirectory(DeformationMap)
add_subdirectory(DirectionalMap)
add_subdirectory(FloatToRgbMap)
add_subdirectory(GradientMap)
add_subdirectory(HairColorPresetsMap)
add_subdirectory(HairColumnMap)
add_subdirectory(HairMap)
add_subdirectory(HsvToRgbMap)
add_subdirectory(LODMap)
add_subdirectory(LayerMap)
add_subdirectory(MultiChannelToFloatMap)
add_subdirectory(NoiseMap)
add_subdirectory(NoiseWorleyMap)
add_subdirectory(NormalToRgbMap)
add_subdirectory(OpMap)
add_subdirectory(OpSqrtMap)
add_subdirectory(ProjectCameraMap)
add_subdirectory(ProjectCylindricalMap)
add_subdirectory(ProjectPlanarMap)
add_subdirectory(ProjectSphericalMap)
add_subdirectory(ProjectTriplanarMap)
add_subdirectory(ProjectTriplanarUdimMap)
add_subdirectory(RampMap)
add_subdirectory(RandomMap)
add_subdirectory(RemapMap)
add_subdirectory(RgbToFloatMap)
add_subdirectory(RgbToHsvMap)
add_subdirectory(RgbToLabMap)
add_subdirectory(SwitchColorMap)
add_subdirectory(SwitchFloatMap)
#add_subdirectory(TemplateMap)
add_subdirectory(ToonMap)
add_subdirectory(TransformNormalMap)
add_subdirectory(TransformSpaceMap)
add_subdirectory(UVTransformMap)
add_subdirectory(WireframeMap)
