# Copyright 2023 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(CombineNormalMap)
add_subdirectory(DistortNormalMap)
add_subdirectory(ImageNormalMap)
add_subdirectory(ProjectCameraNormalMap)
add_subdirectory(ProjectPlanarNormalMap)
add_subdirectory(ProjectTriplanarNormalMap)
add_subdirectory(RandomNormalMap)
add_subdirectory(RgbToNormalMap)
add_subdirectory(SwitchNormalMap)
add_subdirectory(UsdPrimvarReader_normal)
